--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <h1 class="h1">MALARIA PREDICTION SYSTEM</h1>
     <!-- partial:index.partial.html -->
     <div class="container">
         <div class="row">
