--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <h1 class="h1">MALARIA PREDICTION SYSTEM</h1>
+    <center><h1 class="h1" style="color: aliceblue;">MALARIA PREDICTION SYSTEM</h1></center>
     <!-- partial:index.partial.html -->
     <div class="container">
         <div class="row">
