--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body><br><br>
     <center><h1 class="h1" style="color: aliceblue;">MALARIA PREDICTION SYSTEM</h1></center>
     <!-- partial:index.partial.html -->
     <div class="container">
